# T-Layer

./: README.md
.github/workflows/: ci.yml
apps/contracts/: package.json
apps/contracts/contracts/: TestToken.sol
apps/contracts/scripts/: fund-user.js  smoke-test.js
apps/engine/: .env.example  mm_config.yaml  pyproject.toml
apps/engine/src/: config.py  main.py  routes.py  schemas.py
apps/engine/src/attestation/: client.py  verifier.py
apps/engine/src/matching/: engine.py  llm_engine.py  prompt.py  rules_engine.py  runner.py  schema.py  validator.py
apps/engine/src/mm_bot/: bot.py  config.py  escrow_client.py  price_feed.py  risk.py  spread.py
apps/engine/src/models/: order.py
apps/engine/src/pricing/: binance.py
apps/engine/src/signer/: pipeline.py  submitter.py
apps/engine/tests/: test_mm_bot.py
apps/frontend/: README.md  package-lock.json  package.json  vite.config.ts
apps/frontend/src/: App.tsx  abi.ts  index.css
apps/frontend/src/hooks/: useWallet.ts
apps/frontend/src/services/: api.ts
tools/: sync-abi.mjs
